# ERP-AIOps

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  MIGRATION.md  Makefile  README.md  docker-compose.yaml  go.mod  package-lock.json  package.json
.workik/: config.yml
apps/sovereign-next16/: package-lock.json  package.json
cmd/server/: main.go
config/: guardrail-tiers.yaml  slo-definitions.yaml
configs/: capabilities.json  module.yaml  module_dependencies.yaml
configs/modules/: registry.yaml
configs/otel/: collector-config.yaml
configs/rules/: default-rules.yaml
configs/runbooks/: cache-clear.yaml  pod-restart.yaml
crates/aidd-guardrail/: Cargo.toml
crates/opstrac-ai/: Cargo.toml
crates/opstrac-api/: Cargo.toml
crates/opstrac-api/src/: actions.rs  main.rs  webhooks.rs
crates/opstrac-autopilot/: Cargo.toml
crates/opstrac-causal/: Cargo.toml
crates/opstrac-core/: Cargo.toml
crates/opstrac-correlation/: Cargo.toml
crates/opstrac-cost/: Cargo.toml
crates/opstrac-federation/: Cargo.toml
crates/opstrac-github/: Cargo.toml
crates/opstrac-github/src/: lib.rs
crates/opstrac-ingestion/: Cargo.toml
crates/opstrac-ml/: Cargo.toml
crates/opstrac-orchestration/: Cargo.toml
crates/opstrac-remediation/: Cargo.toml
crates/opstrac-security/: Cargo.toml
crates/opstrac-thresholds/: Cargo.toml
crates/opstrac-topology/: Cargo.toml
deploy/crds/: aiops-rule.yaml  incident.yaml
deploy/docker/: Dockerfile.api
docs/: README.md  SOVEREIGN_DOCS_LATEST_UPDATE_2026-03-01.md  SOVEREIGN_GA_IMPLEMENTATION.md  SOVEREIGN_GA_READINESS_SCORECARD.md  SOVEREIGN_PROMPT_EXECUTION.md  aiops.md
docs/00-project-strategy/: BRD.md  Category-King-Operating-Model.md  Compliance-Regulatory-Matrix.md  EA-Roadmap.md  PRD.md  Project-Charter.md
docs/01-architecture/: Category-King-Architecture-Addendum.md  Data-Architecture.md  HLD.md  LLD.md
infra/: Dockerfile.api  Dockerfile.gateway  docker-compose.yaml
migrations/: 001_initial_schema.sql
scripts/: smoke.sh  test-all.sh
src/app/: layout.tsx
web/: .env.example  codegen.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+234 files in other folders)
