[workspace]
resolver = "2"
members = [
    "crates/opstrac-core",
    "crates/opstrac-api",
    "crates/opstrac-ingestion",
    "crates/opstrac-ai",
    "crates/opstrac-ml",
    "crates/opstrac-causal",
    "crates/opstrac-correlation",
    "crates/opstrac-thresholds",
    "crates/opstrac-orchestration",
    "crates/opstrac-autopilot",
    "crates/opstrac-remediation",
    "crates/opstrac-security",
    "crates/opstrac-cost",
    "crates/opstrac-topology",
    "crates/opstrac-federation",
    "crates/aidd-guardrail",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
