[package]
name = "opstrac-github"
version = "0.1.0"
edition = "2021"

[dependencies]
opstrac-core = { path = "../opstrac-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
octocrab = "0.41"
